[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/tile_tooltip.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/text.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/text_small.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.219608, 0.219608, 0.219608, 0.901961 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.627451, 0.627451, 0.627451, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Control" type="MarginContainer"]
margin_right = 370.0
margin_bottom = 200.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileTooltip" type="PopupPanel" parent="."]
visible = true
margin_left = 10.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 190.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TileTooltip"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TileTooltip/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 335.0
margin_bottom = 165.0
mouse_filter = 1
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[table=2]
[cell][img]res://assets/images/ui/icons/Start-Tile_icon.png[/img] 
[/cell]
[cell][u]Universal Utility Conduit[/u]
Status: Functional
[url=reclaim]Reclaim[/url] +50 ore 
[url=reclaim]Repair[/url] -5 ore
[url=reclaim]Disable[/url]
[/cell]
[table]"
text = " 
Universal Utility Conduit
Status: Functional
Reclaim +50 ore 
Repair -5 ore
Disable
"
__meta__ = {
"_edit_group_": true
}
[connection signal="meta_clicked" from="TileTooltip/MarginContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="mouse_exited" from="TileTooltip/MarginContainer/RichTextLabel" to="." method="_on_RichTextLabel_mouse_exited"]
